--- a/packages/puppeteer/test/fixtures/index.html
+++ b/packages/puppeteer/test/fixtures/index.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <title>Test</title>
-</head>
+  <head>
+    <title>Test</title>
+  </head>
 </html>
