--- a/packages/webdriverjs/test/fixtures/inner-frame.html
+++ b/packages/webdriverjs/test/fixtures/inner-frame.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="bobbert">
-<head>
-	<title>Hello</title>
-</head>
+  <head>
+    <title>Hello</title>
+  </head>
 </html>
