--- a/packages/webdriverjs/test/fixtures/outer-frame.html
+++ b/packages/webdriverjs/test/fixtures/outer-frame.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
-<head>
-	<title>Outer Frame Test</title>
-</head>
-<body>
-	<iframe src="inner-frame.html" title="Test inner frame"></iframe>
-</body>
+  <head>
+    <title>Outer Frame Test</title>
+  </head>
+  <body>
+    <iframe src="inner-frame.html" title="Test inner frame"></iframe>
+  </body>
 </html>
