--- a/packages/webdriverjs/test/fixtures/sandbox-outer-configure-frame.html
+++ b/packages/webdriverjs/test/fixtures/sandbox-outer-configure-frame.html
@@ -1,9 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="FFFF">
-<head>
-	<title>Configure Frame Test</title>
-</head>
-<body>
-	<iframe sandbox src="inner-configure-frame.html" title="Test inner frame"></iframe>
-</body>
+  <head>
+    <title>Configure Frame Test</title>
+  </head>
+  <body>
+    <iframe
+      sandbox
+      src="inner-configure-frame.html"
+      title="Test inner frame"
+    ></iframe>
+  </body>
 </html>
