--- a/packages/puppeteer/test/fixtures/frames/foo.html
+++ b/packages/puppeteer/test/fixtures/frames/foo.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Foo</h1>
+    <input type="text" name="firstname" id="firstname">
     <iframe src="/frames/bar.html"></iframe>
   </body>
 </html>
