--- a/packages/puppeteer/test/fixtures/nested-frames.html
+++ b/packages/puppeteer/test/fixtures/nested-frames.html
@@ -6,6 +6,6 @@
   <body>
     <h1>This page has nested frames!</h1>
     <br /><br /><br />
-    <iframe src="/frames/foo.html"></iframe>
+    <iframe id="topLevel" src="/frames/foo.html"></iframe>
   </body>
 </html>
