--- a/packages/webdriverjs/src/test/fixtures/frames/recursive.html
+++ b/packages/webdriverjs/src/test/fixtures/frames/recursive.html
@@ -3,8 +3,7 @@
   <head>
     <title>Recursive</title>
   </head>
-  <body>
-    <h1>Recursive</h1>
-    <iframe src="/frames/recursive.html"></iframe>
-  </body>
+  <frameset>
+    <frame src="/frames/recursive.html">
+  </frameset>
 </html>
