--- a/packages/webdriverjs/src/test/fixtures/outer-configure-iframe.html
+++ b/packages/webdriverjs/src/test/fixtures/outer-configure-iframe.html
@@ -3,7 +3,7 @@
   <head>
     <title>Configure Frame Test</title>
   </head>
-  <frameset>
-    <frame src="inner-configure-frame.html" title="Test inner frame">
-  </frameset>
+  <body>
+    <iframe src="inner-configure-frame.html" title="Test inner frame"></iframe>
+  </body>
 </html>
