--- a/packages/webdriverjs/src/test/fixtures/recursive-frames.html
+++ b/packages/webdriverjs/src/test/fixtures/recursive-frames.html
@@ -3,10 +3,8 @@
   <head>
     <title>Recursive Frames</title>
   </head>
-  <body>
-    <h1>This page has a weird recursive frams!</h1>
-    <br /><br /><br />
-    <iframe src="/frames/baz.html"></iframe>
-    <iframe src="/frames/recursive.html"></iframe>
-  </body>
+  <frameset>
+    <frame src="/frames/baz.html">
+    <frame src="/frames/recursive.html">
+  </frameset>
 </html>
