--- a/packages/webdriverio/fixtures/frames/bar.html
+++ b/packages/webdriverio/fixtures/frames/bar.html
@@ -3,8 +3,7 @@
   <head>
     <title>Bar</title>
   </head>
-  <body>
-    <h1>Bar</h1>
-    <iframe src="/frames/baz.html"></iframe>
-  </body>
+  <frameset>
+    <frame src="/frames/baz.html">
+  </frameset>
 </html>
