--- a/packages/webdriverio/fixtures/frames/foo.html
+++ b/packages/webdriverio/fixtures/frames/foo.html
@@ -3,8 +3,7 @@
   <head>
     <title>Foo</title>
   </head>
-  <body>
-    <h1>Foo</h1>
-    <iframe src="/frames/bar.html"></iframe>
-  </body>
+  <frameset>
+    <frame src="/frames/bar.html">
+  </frameset>
 </html>
