--- a/packages/webdriverio/fixtures/nested-frames.html
+++ b/packages/webdriverio/fixtures/nested-frames.html
@@ -3,9 +3,7 @@
   <head>
     <title>Nested Frames</title>
   </head>
-  <body>
-    <h1>This page has nested frames!</h1>
-    <br /><br /><br />
-    <iframe src="/frames/foo.html"></iframe>
-  </body>
+  <frameset>
+    <frame src="/frames/foo.html">
+  </frameset>
 </html>
