--- a/packages/playwright/fixtures/frames/baz.html
+++ b/packages/playwright/fixtures/frames/baz.html
@@ -5,5 +5,11 @@
   </head>
   <body>
     <h1>Baz</h1>
+    <div id="myList">
+      <dt>Coffee</dt>
+      <dd>Black hot drink</dd>
+      <dt>Milk</dt>
+      <dd>White cold drink</dd>
+    </div>
   </body>
 </html>
