--- a/packages/webdriverjs/src/test/fixtures/iframes/bar.html
+++ b/packages/webdriverjs/src/test/fixtures/iframes/bar.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Bar</h1>
-    <iframe src="/iframes/baz.html"></iframe>
+    <iframe src="/iframes/baz.html" id="bar-baz"></iframe>
   </body>
 </html>
