--- a/packages/webdriverjs/src/test/fixtures/iframes/foo.html
+++ b/packages/webdriverjs/src/test/fixtures/iframes/foo.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Foo</h1>
-    <iframe src="/iframes/bar.html"></iframe>
+    <iframe src="/iframes/bar.html" id="foo-bar"></iframe>
+    <iframe src="/iframes/baz.html" id="foo-baz"></iframe>
   </body>
 </html>
