--- a/packages/webdriverjs/src/test/fixtures/nested-frames.html
+++ b/packages/webdriverjs/src/test/fixtures/nested-frames.html
@@ -4,6 +4,8 @@
     <title>Nested Frames</title>
   </head>
   <frameset>
-    <frame src="/frames/foo.html">
+    <frame src="/frames/foo.html" id="frm-foo"></frame>
+    <frame src="/frames/bar.html" id="frm-bar"></frame>
+    <frame src="/frames/baz.html" id="frm-baz"></frame>
   </frameset>
 </html>
