--- a/packages/webdriverjs/src/test/fixtures/nested-iframes.html
+++ b/packages/webdriverjs/src/test/fixtures/nested-iframes.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <h1>This page has nested frames!</h1>
-    <br /><br /><br />
-    <iframe src="/iframes/foo.html"></iframe>
+    <iframe src="/iframes/foo.html" id="ifr-foo"></iframe>
+    <iframe src="/iframes/bar.html" id="ifr-bar"></iframe>
+    <iframe src="/iframes/baz.html" id="ifr-baz"></iframe>
   </body>
 </html>
