--- a/packages/webdriverjs/src/test/fixtures/crash-me-parent.html
+++ b/packages/webdriverjs/src/test/fixtures/crash-me-parent.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     One of these errors:
-    <iframe src="/iframes/bar.html" id="ifr-baz"></iframe>
-    <iframe src="/crash-me.html" id="ifr-baz"></iframe>
+    <iframe src="/iframes/bar.html" id="ifr-bar"></iframe>
+    <iframe src="/crash-me.html" id="ifr-crash-me"></iframe>
     <iframe src="/iframes/baz.html" id="ifr-baz"></iframe>
   </body>
 </html>
