--- a/packages/webdriverjs/src/test/fixtures/crash-me-parent.html
+++ b/packages/webdriverjs/src/test/fixtures/crash-me-parent.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nested Frames</title>
+    <title>Crash-me parent</title>
   </head>
   <body>
-    <h1>This page has nested frames!</h1>
-    <iframe src="/iframes/foo.html" id="ifr-foo"></iframe>
+    One of these errors:
     <iframe src="/iframes/bar.html" id="ifr-bar"></iframe>
+    <iframe src="/crash-me.html" id="ifr-crash-me"></iframe>
     <iframe src="/iframes/baz.html" id="ifr-baz"></iframe>
   </body>
 </html>
