--- a/packages/webdriverjs/tests/fixtures/context.html
+++ b/packages/webdriverjs/tests/fixtures/context.html
@@ -6,6 +6,8 @@
   <body>
     <h1>Context Test</h1>
     <div class="include">include me</div>
+    <div class="include2">include me two</div>
     <div class="exclude">exclude me</div>
+    <div class="exclude2">exclude me two</div>
   </body>
 </html>
