--- a/packages/webdriverjs/tests/fixtures/context.html
+++ b/packages/webdriverjs/tests/fixtures/context.html
@@ -9,5 +9,7 @@
     <div class="include2">include me two</div>
     <div class="exclude">exclude me</div>
     <div class="exclude2">exclude me two</div>
+
+    <iframe src="iframe-one.html" id="ifr-one"></iframe>
   </body>
 </html>
